<resources>
    <string name="app_name">Receipts &amp; Products</string>
    <!--Button-->
    <string name="go_to_products_button_name">Product List</string>
    <string name="go_to_receipts_button_name">Receipt List</string>
    <string name="fab_description">Fab for adding product in product list</string>

    <!--TextViews-->
    <string name="product_name_text_view">Product name</string>
    <string name="product_cost_text_view">Product cost</string>
    <string name="product_calories_text_view">Product calories</string>
    <string name="dialog_header_text_view">Add product to your product list</string>
    <string name="dialog_button_ok_text">OK</string>
    <string name="dialog_button_cancel_text">CANCEL</string>

    <!--EditText-->
    <string name="enter_the_product_hint">Enter the product</string>
    <string name="enter_the_product_calories_hint">calories</string>
    <string name="enter_the_product_cost_hint">cost</string>

</resources>